# Transversales_a_circulos_inflados

./: .gitignore  CMakeLists.txt  Judith_Test.kdev4  README.md  distintoradio.cpp  distintoradio_de.cpp  distintoradio_gd.cpp  main.cpp  mismoradio.cpp  mismoradio_de.cpp  mismoradio_gd.cpp  playground.cpp
.kdev4/: Judith_Test.kdev4
include/: DifferentialEvolution.hpp  Projectors.hpp  View.hpp  transversal.hpp  transversalGrad.hpp
